--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,16 @@ p {
     font-family: 'Lato', sans-serif;
     font-weight: normal;
 }
+p.small{
+    font-size:0.8em; 
+    display:inline-block; 
+    margin-left:3em;
+}
+@media (max-width : 767px) {
+    p.small{
+        margin-right:3em;
+    }
+}
 
 ul,
 ol {
@@ -154,12 +164,7 @@ nav li:last-child {
     margin: 0;
 }
 
-/* //social icons */
-.header-top_w3layouts p,
-.header-w3layouts p,
-.top-w3layouts p {
-    font-size: 14px;
-}
+
 
 a.login-button-2 {
     letter-spacing: 1px;
@@ -219,12 +224,12 @@ nav ul {
 /* Positioning the navigation items inline */
 nav ul li {
     display: inline-block;
-    float: left;
+    
 }
 
 /* Styling the links */
 nav li {
-    margin: 0 10px;
+    margin: 0 30px;
 }
 
 nav a {
@@ -418,7 +423,9 @@ ul.menu::-webkit-scrollbar {
 }
 
 ul.menu::-webkit-scrollbar-track {
+    -moz-box-shadow:    inset 0 0 6px rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    box-shadow:         3inset 0 0 6px rgba(0, 0, 0, 0.1);
 }
 
 ul.menu::-webkit-scrollbar-thumb {
@@ -431,8 +438,9 @@ ul.menu::-webkit-scrollbar-thumb {
 /* logo */
 a.logo {
     color: #3a3939;
-    font-size: 40px;
+    font-size: 30px;
     padding: 0;
+    /*padding-top:10px;*/
     font-weight: bold;
     position: relative;
 }
@@ -440,12 +448,23 @@ a.logo {
 a.logo span {
     color: #ff3f34;
     font-size: 15px;
-    letter-spacing: 5px;
-    font-weight: 500;
+    font-weight: 400;
     position: absolute;
-    right: 0;
-    top: -2px;
+    left: 0;
+    top: 0.75em;
 }
+
+@media (max-width : 767px) {
+    h1.logo-tasty{
+        margin-left: auto; 
+        margin-right:auto;
+    }
+}
+.logo-tasty{
+    display:flex; 
+    align-content: center;
+}
+.logo-tasty img{vertical-align: bottom;}
 
 /* //logo */
 
@@ -509,7 +528,7 @@ button.submit {
 .banner-info_agile_w3ls {
     padding-top: 10em;
     padding-left: 5em;
-}`
+}
 
 .banner-info_agile_w3ls h5 {
     font-family: 'Lato', sans-serif;
@@ -829,7 +848,7 @@ img.img-fluid.sub-img {
 footer {
     background: #17181b;
 }
-
+footer h5{color:#c1c0c0;}
 h2 a.logo {
     color: #fff;
 }
@@ -1334,16 +1353,6 @@ h3.title-sub span {
 
     .banner-info_agile_w3ls {
         padding-top: 5em;
-    }
-
-    a.logo {
-        font-size: 36px;
-    }
-
-    a.logo span {
-        font-size: 13px;
-        letter-spacing: 6px;
-        top: 0;
     }
 
     .right-space {
