--- a/css/style.css
+++ b/css/style.css
@@ -321,10 +321,10 @@ ul.dropdown-menu {
 .py-lg{padding-top:3em; padding-bottom:3em;}
 .py-xl{padding-top:4em; padding-bottom:4em;}
 
-.px-sm{padding-top:1em; padding-bottom:1em;}
-.px-md{padding-top:2em; padding-bottom:2em;}
-.px-lg{padding-top:3em; padding-bottom:3em;}
-.px-xl{padding-top:4em; padding-bottom:4em;}
+.px-sm{padding-left:1em; padding-right:1em;}
+.px-md{padding-left:2em; padding-right:2em;}
+.px-lg{padding-left:3em; padding-right:3em;}
+.px-xl{padding-left:4em; padding-right:4em;}
 
 .inline{display: inline-block;}
 
