--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body{
 	background:#FFFFFF;
 }
 p {margin-top:1.5em;}
+.bold{font-weight: 700;}
 .afficher-prix{
   display: block;
   margin:2em auto;
