--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,9 @@ p {margin-top:1.5em;}
 .afficher-prix{
   display: block;
   margin:2em auto;
-  padding:1em 0;
+  padding:1em 0 3em 0;;
   border-top:1px solid #ecedee;
-  border-bottom:1px solid #ecedee;
+  border-bottom:4px solid #f04100;
 }
 /* bootstrap fix */
 .btn{
@@ -54,9 +54,10 @@ p {margin-top:1.5em;}
   .btn-primary:active,
   .btn-primary.active,
   .open > .dropdown-toggle.btn-primary {
-    color: #fff;
-    background-color: #2f2f2f;
-    border-color: #2f2f2f;
+    color: #f04100;
+    background-color: white;
+    border-color: #f04100;
+    opacity: 0.8;
   }
 .blanc{color:white;}
 .rouge{color:#f04100;}
